Made toolbar items display block instead inline-block to stop main-toolbar line-height from affecting vertical spacing.

--- a/src/styles/brackets_patterns_override.less
+++ b/src/styles/brackets_patterns_override.less
@@ -115,7 +115,7 @@
     box-sizing: border-box;
 
     background: @main-toolbar-background-color;
-    padding: 5px 0px;
+    padding: 7px 0px;
 
     // Ensure icons are vertically stacked & horizontally centered
     .vbox;
@@ -129,8 +129,9 @@
         > a {
             border-radius: 3px;
             background-position: 0 0;
+            display: block;
             height: 24px;
-            margin: 3px 0px 0px;
+            margin: 7px 0px 0px 3px;
             padding: 0 !important;
             position: static !important;
             top: 0 !important;
